--- a/gmall-parent/pom.xml
+++ b/gmall-parent/pom.xml
@@ -21,12 +21,13 @@
         <httpclient.version>4.5.10</httpclient.version>
         <commons-lang3.version>3.9</commons-lang3.version>
         <mapper-starter.version>2.1.5</mapper-starter.version>
-        <jedis.version>2.8.1</jedis.version>
+        <jedis.version>2.10.2</jedis.version>
         <jest.version>6.3.1</jest.version>
         <jna.version>5.2.0</jna.version>
         <beanUtils.version>1.9.4</beanUtils.version>
         <spring-support.version>1.0.2</spring-support.version>
         <fastdfs-client.version>1.29-SNAPSHOT</fastdfs-client.version>
+        <commons-pool2.version>2.6.2</commons-pool2.version>
     </properties>
 
     <parent>
@@ -156,6 +157,12 @@
                 <groupId>org.csource</groupId>
                 <artifactId>fastdfs-client-java</artifactId>
                 <version>${fastdfs-client.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
             </dependency>
 
         </dependencies>
