--- a/gmall-user-service/src/main/resources/application.properties
+++ b/gmall-user-service/src/main/resources/application.properties
@@ -28,3 +28,10 @@ spring.dubbo.registry.address=47.104.172.91:2181
 spring.dubbo.registry.protocol=zookeeper
 #dubbo的扫描路径
 spring.dubbo.base-package=com.ky.gmall
+
+#redis连接地址
+spring.redis.host=47.104.172.91
+#redis端口号
+spring.redis.port=6379
+#redis数据库
+spring.redis.database=0
