module passport-web done function Single-sign-on and Oauth-sign-on(weibo) bug of user-service released

--- a/gmall-passport-web/src/main/resources/application.properties
+++ b/gmall-passport-web/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.dubbo.consumer.timeout=600000
 #默认为true,设置检查服务存在(false解决无法让consumer先启动的问题)
 spring.dubbo.consumer.check=false
 
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=LEGACYHTML5
