--- a/gmall-passport-web/pom.xml
+++ b/gmall-passport-web/pom.xml
@@ -8,12 +8,10 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>com.ky.gmall</groupId>
-    <artifactId>gmall-user-service</artifactId>
+    <artifactId>gmall-passport-web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gmall-user-service</name>
-
+    <name>gmall-passport-web</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -23,19 +21,13 @@
     <dependencies>
         <dependency>
             <groupId>com.ky.gmall</groupId>
-            <artifactId>gmall-service-util</artifactId>
+            <artifactId>gmall-api</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>slf4j-log4j12</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
             <groupId>com.ky.gmall</groupId>
-            <artifactId>gmall-api</artifactId>
+            <artifactId>gmall-web-util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
