--- a/gmall-search-service/src/main/resources/application.properties
+++ b/gmall-search-service/src/main/resources/application.properties
@@ -38,3 +38,8 @@ spring.redis.host=47.104.172.91
 spring.redis.port=6379
 #redis数据库
 spring.redis.database=0
+
+#MQ消息端口tcp协议
+spring.activemq.broker-url=tcp://47.104.172.91:61616
+#开启监听
+activemq.listener.enable=true
