--- a/gmall-seckill/src/main/resources/application.properties
+++ b/gmall-seckill/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #服务端口
-server.port=8071
+server.port=8001
 #JDBC
 spring.datasource.username=root
 spring.datasource.password=ilcherry1120
@@ -19,7 +19,7 @@ logging.level.root=info
 #当前模块名称
 #spring.dubbo.module.name=user-service
 #dubbo的服务名称
-spring.dubbo.application=manage-service
+spring.dubbo.application=secKill
 #dubbo的通讯协议名称
 spring.dubbo.protocol.name=dubbo
 #zookeeper注册中心的地址
@@ -36,7 +36,3 @@ spring.redis.port=6379
 #redis数据库
 spring.redis.database=0
 
-#MQ消息端口tcp协议
-spring.activemq.broker-url=tcp://47.104.172.91:61616
-#开启监听
-activemq.listener.enable=true
